@@ -1,0 +1,4 @@
+._*
+*.o
+.RDataTmp
+.Rhistory
